# HMO

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  RoadMap-tov1.odt  push_pyPi.sh  push_pyPi_fr.sh  pyproject.toml
dev/: hmo-dev.ipynb
docs/source/: conf.py  index.rst
hmo/: HMO-DragAtomdev.py  HMO-v0.5.1dev.py  HMO.py  HMO.spec  HMO_v00dev.py  HMO_v01dev.py  HMO_v02dev.py  HMO_v03dev.py  HMO_v04dev.py  MakeApp  __init__.py  benzene.hmo  cyclob.hmo  makeArchive4Linux.sh  test.hmo
hmo/Examples/: coronene.hmo
hmo/Examples-dev/: COT.hmo  Pcoronene.hmo  acide_benzoique.hmo  azulene.hmo  fluorenyl.hmo  my_molecule_HMO_diagram.tmp.eps  pentalene.hmo  s-indacenyl.hmo  triazine.hmo
hmo/HMO-Installer-Linux/: HMO.desktop  HMO_install.sh  HMO_uninstall.sh  README.md
hmo/installer/: HMO_install.sh
icons/samples/0353-03_ultimate_free_icon_set/: Six Revisions Freebie License - Read Me.txt
icons/samples/0353-03_ultimate_free_icon_set/ai/: ultimate_free_icon_set_AI.ai
