[project]
name = "HMO"
version = "0.7.5"
description = "interactive application that allows users to draw the sigma skeleton of conjugated systems, build the corresponding Hückel matrix, calculate π molecular orbitals, and visualize the numerical results as tables and graphics"
authors = [{name = "Romuald POTEAU, LPCNO", email = "romuald.poteau@univ-tlse3.fr"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "ipywidgets",
    "jupyter",
    "Pillow",
    "openpyxl",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["hmo", "hmo.*"]

[tool.setuptools.package-data]
"hmo" = [
    "DesignOfMOdiagram/*",
    "Fonts/**/*",
    "icons-logos-banner/**/*"
]

[project.urls]
Documentation = "https://hmo.readthedocs.io/"
Repository = "https://github.com/rpoteau/HMO"
Changelog = "https://github.com/rpoteau/HMO/blob/main/CHANGELOG.md"

[project.optional-dependencies]
docs = [
  "sphinx",
  "sphinx_rtd_theme",
  "myst-parser",
  "numpydoc"
]


